# georgebot

./: .gitignore  Dockerfile  README.md  conf.yaml  config.py  docker-compose.debug.yml  docker-compose.yml  georgebot.ipynb  georgebot.py  pyproject.toml  source.py
conf/: conf.yaml
georgebot/: database.py  georgebot.py  source.py
